--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Getting Started Example",
+    "name": "GitLance",
     "version": "1.0",
-    "description": "Build an Extension!",
+    "description": "Innovative freelancing solution",
     "permissions": [
         "activeTab",
         "declarativeContent",
@@ -9,20 +9,10 @@
     ],
     "page_action": {
         "default_popup": "popup.html",
-        "default_icon": {
-            "16": "images/get_started16.png",
-            "32": "images/get_started32.png",
-            "48": "images/get_started48.png",
-            "128": "images/get_started128.png"
-        }
+        "default_icon": {}
     },
-    "options_page": "./options.html",
-    "icons": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
-    },
+    "options_page": "",
+    "icons": {},
     "background": {
         "scripts": [
             "background.js"
