--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -7,7 +7,7 @@
         "declarativeContent",
         "storage"
     ],
-    "page_action": {
+    "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {}
     },
