--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -5,8 +5,7 @@
     "permissions": [
         "activeTab",
         "declarativeContent",
-        "storage",
-        "*://apis.google.com/*"
+        "storage"
     ],
     "browser_action": {
         "default_popup": "popup.html",
