--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.0",
+    "firebase": "^6.6.0",
+    "firebaseui": "^4.2.0",
     "materialize-css": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-materialize": "^3.3.5",
+    "react-redux": "^7.1.1",
+    "react-redux-firebase": "^2.4.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-sweet-progress": "^1.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
     "styled-components": "^4.3.2",
     "typescript": "^3.6.2"
   },
