--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "firebase": "^6.6.0",
     "firebaseui": "^4.2.0",
+    "history": "^4.9.0",
     "materialize-css": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -23,6 +24,7 @@
     "react-scripts": "3.1.1",
     "react-sweet-progress": "^1.1.2",
     "redux": "^4.0.4",
+    "redux-firestore": "^0.9.0",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
     "styled-components": "^4.3.2",
