--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "firebaseui": "^4.2.0",
     "history": "^4.9.0",
     "materialize-css": "^1.0.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-materialize": "^3.3.5",
