--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -13,6 +13,8 @@
     "node": "8"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0"
   },
