--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -16,7 +16,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "stripe": "^7.9.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
