--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.0",
+    "create-react-app": "^3.1.1",
     "firebase": "^6.6.0",
     "firebaseui": "^4.2.0",
     "history": "^4.9.0",
+    "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
